--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-i18n": "^11.0.0-rc.1",
